--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
     build:
       context: ./CrackWorker
       dockerfile: Dockerfile
-    image: crack-worker
+    image: crack-worker-1
     environment:
       - SERVER_PORT=8081
     ports:
@@ -25,7 +25,7 @@ services:
     build:
       context: ./CrackWorker
       dockerfile: Dockerfile
-    image: crack-worker
+    image: crack-worker-2
     environment:
       - SERVER_PORT=8082
     ports:
@@ -35,8 +35,9 @@ services:
     build:
       context: ./CrackWorker
       dockerfile: Dockerfile
-    image: crack-worker
+    image: crack-worker-3
     environment:
       - SERVER_PORT=8083
     ports:
       - "8083:8083"
+
