--- a/CrackWorker/src/main/resources/application.properties
+++ b/CrackWorker/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 spring.application.name=CrackWorker
 
-server.port=${SERVER_PORT:8081}
+server.port=${SERVER_PORT}
 
-manager.url=http://crack-manager:8080/internal/api/manager/hash/crack/request
+spring.rabbitmq.host=${RABBIT_HOST}
+spring.rabbitmq.port=${RABBIT_PORT}
+spring.rabbitmq.password=${RABBIT_PASSWORD}
+spring.rabbitmq.username=${RABBIT_USERNAME}
 
+rabbit.task.exchange=${RABBIT_TASK_EXCHANGE}
+rabbit.task.queue=${RABBIT_TASK_QUEUE}
+rabbit.task.key=${RABBIT_TASK_KEY}
+rabbit.result.exchange=${RABBIT_RESULT_EXCHANGE}
+rabbit.result.queue=${RABBIT_RESULT_QUEUE}
+rabbit.result.key=${RABBIT_RESULT_KEY}
