--- a/CrackManager/src/main/resources/application.properties
+++ b/CrackManager/src/main/resources/application.properties
@@ -1,10 +1,24 @@
 spring.application.name=CrackManager
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.rabbitmq.host=${RABBIT_HOST}
+spring.rabbitmq.port=${RABBIT_PORT}
+spring.rabbitmq.password=${RABBIT_PASSWORD}
+spring.rabbitmq.username=${RABBIT_USERNAME}
 
-server.port=${SERVER_PORT:8080}
+server.port=${SERVER_PORT}
 
-worker.urls=http://crack-worker-1:8081,http://crack-worker-2:8082,http://crack-worker-3:8083
-worker.urn=internal/api/worker/hash/crack/task
-worker.num=${WORKER_NUM:3}
-alphabet=${ALPHABET:abcdefghijklmnopqrstuvwxyz0123456789}
-task.max=${TASK_MAX:5}
+app.worker-urls=${WORKER_URLS}
+app.worker-urn=internal/api/worker/hash/crack/task
+app.alphabet=${ALPHABET}
+app.max_working_tasks=${MAX_WORKING_TASKS}
+app.time-for-stop-task=${TIME_FOR_STOP_TASK}
+app.checking-timeout-rate=${CHECKING_TIMEOUT_RATE}
+
+rabbit.task.exchange=${RABBIT_TASK_EXCHANGE}
+rabbit.task.queue=${RABBIT_TASK_QUEUE}
+rabbit.task.key=${RABBIT_TASK_KEY}
+rabbit.result.exchange=${RABBIT_RESULT_EXCHANGE}
+rabbit.result.queue=${RABBIT_RESULT_QUEUE}
+rabbit.result.key=${RABBIT_RESULT_KEY}
+
 
